--- a/Assignment MSB104.Rmd
+++ b/Assignment MSB104.Rmd
@@ -2,10 +2,10 @@
 title: "Econometrics assignment"
 author: "Heidi Marie Rolfsnes and Ann Elisabeth Jacobsen"
 output:
-  word_document: default
-  pdf_document: default
   html_document: default
-bibliography: references.bib
+  pdf_document: default
+  word_document: default
+
 ---
 
 ```{r Packages}
@@ -71,12 +71,13 @@ na.omit()
 #NA variables are removed
 ```
 
+***Table 1***
 
 Briefly about what we found in the summary. We found the min and the max values. i.e. the smallest and the highest GDP per capita for the country. We also found 1st quartile and 3rd quartile. The first quartile was the observation between the median and the lowest value, and looks at the 25% lowest values from the 75% highest. The median looks at the value that is observed the most times in the middle of the observations. The third quartile is then, naturally enough, the value between the median and the highest value.We have also look at mean which told us what the average observation for all regions was.
 
 And then we further look at GDP, population and GDP per capita in our five countries and what results it gives us when we calculate all the NUTS3 regions together.
 
-LINK TIL TABLE 2
+***Table 2***
 
 From the summary we can see that GDP per capita at NUTS3 level for all our countries was 22 438,88 Euro. Since we don't have any other values to compare with we can't say to much about it, because it doesn´t give us to much information. We will therefor look at the nuts3 regions for each country. 
 
@@ -94,38 +95,54 @@ Since Hungary and Slovakia have few nuts3 regions we chose to look at them toget
 
 Denmark is a small country in Scandinavia,and they don't have many NUTS3 regions. Kobenhagen is the capital of Denmark, and as we can see above it stand out together with the surrounding region. we can se that the region around the capital has had a higher growth. Capital cities are often richer than other regions. we can see that in Denmark as well. 
 
+***Graph 1***
+
 To get an overview, we have chosen to look at 2010 for all the regions in Denmark to see which regions are the richest and least wealties.
 
 The whealtiest regions in Denmark
 
-
+***Table 3***
 
 The three Whealties regions in Denmark are Kobenhagen (DK011), Kobenhagen area (DK012) and Sydjylland (DK032).
 The three least wealtiest regions in Denmark are Vest- og Sydjælland (DK022), Bornholm (DK014) and Østsjælland (DK021).
 
+***Table 4***
+
+***Table 5***
 Denmark has 11 nuts3 regions, it is the capital and the surrounding region that stands out among the richest, in the poor countries it is more even, we can see that there is 30,000 Euro between the richest and poorest.
 
 ### France
 
 France is a country in Western Europe, they also have colonies in other parts of the world. France has the largest land areas in the EU, which we see in the fact that they have over a hundred nuts3 regions.
 
+***Graph 2***
+
 Since France has so many nuts3 regions, it is not so easy to distinguish the different regions. We see that here too the capital Paris stands out. When we made a summary, we see that there is a difference in min and max. When we look more closely at the numbers, we can see that this may be due to France having colonies in other countries that are included. These colonies are located in Africa and South America which has a negative effect on France's overall GDP. For further research, we have chosen to remove these regions from the data set.
 
+***Graph 3***
 
 The whealtiest regions in France
+
+***Table 6***
 
 France now have 96 nuts3 regions. The three wealtiest regions are Paris (FR101), Hauts-de-seine (FR105) and Rhône (FRK26). Paris og Hauts-de-seine stands out clarly from the other region with a difference of approximately 50,000 Euro GDP pr capita.
 The three poorest regions Creuse (FRI22), Ariège (FRJ21) and  Meuse(FRF32). These regions have quite the same GDP pr capita. 
 
-### Hungary and Slovakia
+***Table 7***
 
+### Hungary and Slovakia
 
 Hungary and Slovakia are both countries in Central Europe, here we see that the capitals Bratislava and Budapest both had great growth until 2008. Then Budabest went down a little while Bratislava had a larger increase. the rest of the regions have had an more steady growth.
 
+***Graph 4***
+
 The whealtiest regions in Hungary and Slovakia
 
+***Table 8***
 
 Hungary and Slovakia has 28 regions together. The tre whelties are Bratislava (SK010), Budapest (HU110) and Trnava (SK021). The capitals of both countries have the richest region. The least wheltiest regions are Nògràd(HU313), Szabolcs-Szatmàr-Bereg(HU323). We can see that the three poorest regions belong to Hungary. which means that they have a lower GDP per capita than Slovakia in the poorest regions. We see that there is a difference between min and max in the regions of Hungary. 
+
+***Table 9***
 
 There is a difference of approximately 25,000 Euro between the whelties and poorest regions in Hungary. Based on these observations, Bratislava is the richest region, since we do not see any of Slovakia's regions among the lowest, we can assume that Slovakia has a higher GDP per capita than Hungary has for its inhabitants.
 
@@ -134,10 +151,15 @@ There is a difference of approximately 25,000 Euro between the whelties and poor
 Portugal is a country in southern Europe. Portugal also has two archipelagos, each representing a different region.
 We see steady growth in all the regions, all have had a slight decline between 2010-2012, after that there has been an increase. We also see that in Portugal the capital Lisbon stands out as the richest region.
 
+***Graph 5***
+
 The whealtiest regions in Portugal
 
+***Table 10***
 
 Portugal has 25 regions. The wheltiest are Lisboa(PT170), Alentejo Litoral (PT181) and Algarve (PT150). We can se that Lisboa has a litle higher GDP pr capita then the rest of the wheltiest regions. The poorest regions are Tãmega e Sousa (PT11C), Alto Tãmega (PT11B) and Beiras e Serra da Estrela (PT16J). There is approximatly 14,000 Euro in GDP per capita, in difference between the wealties and the poorest regions.     
+
+***Table 11***
 
 In all the countries, we see that it is the capitals that stand out the most and have the highest GDP per capita among their inhabitants. Paris has managed to have the highest GDP per capita and the poorest regions can be found in Hungary.
  
@@ -179,17 +201,23 @@ st()
 First, we look at all the regions in the selected countries. We have 46 observations. The total Gini for all countries for all years is 0.28. This Gini is for all 5 countries over the last 20 years. We think that it will be a bit "washed away" and will therefore look at each individual country. 
 We can also see that we have ginis that are 0 which means a perfect correlation. We will look at each country to find out why and where there are regions that have ginis that are 0. To look more specifically at the countries, we have chosen to only look at the year 2010.
 
-
+***Graph 6***
 
 In the graph above, you can see that there are two regions that have varied quite a bit over the past 20 years. They still stay below 0.025, which shows that there is little difference between rich and poor in these regions. Another region that stands out is DK01. It is a bit further up the graph than the other regions. Although it is not close to 0, there is a greater difference between rich and poor here than in the other regions.
+
+***Table 12***
+***Table 13***
 
 In Denmark, the Gini coefficients are between 0 and 0,11. Denmark has a region Nordjylland (DK05) which is an outlier. In this region, no data has been recorded in 2010.  Denmark has only five NUTS2 regions, which doesn't gives us much data to work with.
 
 ### France
 
-
+***Graph 7***
 
 In France, there are so many regions that it is difficult to see the regions properly in the graph above. What is shown well is that the vast majority of regions follow each other evenly by being below 0.1. There are still some that stand out and we can see that FR10 is the highest with a gini of 0.3, while FRJ1 and FRK1 fluctuate quite a bit from 2005 to 2020
+
+***Table 14***
+***Table 15***
 
 In France, the Gini coefficients are between 0,02 and 0,26, which shows us that France has a slightly higher gini than Denmark, which means that the inequality is slightly greater in France.France doesn´t have any outliers, after we took away the FRY regions, 
 
@@ -198,13 +226,25 @@ In France, the Gini coefficients are between 0,02 and 0,26, which shows us that 
 
 Hungary and Slovakia have large fluctuations in their regions. One of the regions with the most fluctuations is HU22 where we can see that they are down to a gini of 0.075 in 2012, while in 2016 they are up to a gini of approximately 0.12. Hungary and Slovakia are small countries in Eastern Europe and we assume that this is the reason why there are large fluctuations.
 
+***Graph 8***
+
 In Hungary, the Gini coefficient are between 0 and 0,08. Hungary has two regions which are outliers Budapest (HU11) and Pest (HU12). Pest and Budapest hasn't had any data for the periode that we are looking into.   
+
+***Table 16***
+***Table 17***
+
+***Table 18***
 
 In Slovakia,the Gini coefficient are also between 0 and 0,08. Slovakia has on region that is an outliers which are (SK01). It leaves only Slovakia with three regions from which we obtain data. 
 
 ### Portugal
 
+***Graph 9***
+
 In the graph for Portugal, we can see that the Gini in several of the regions has been declining over the past 20 years. That is to say, the differences between rich and poor have narrowed over the years. PT18 stands out somewhat in that there are strong fluctuations over the years.
+
+***Table 19***
+***Table 20***
 
 In Portugal, the Gini coefficient are between 0 and 0,08. Portugal has four regions, Algarve (PT15) Lisboa(PT17), Regiäo Autònoma dos Acores (PT20) and Regiäo Autònoma da Madeira (PT30). Regiäo Autònoma dos Acores and Regiäo Autònoma da Madeira are both archipelagos belonging to Portugal which may be the reason why they are outliers. Portugal doesn't have many NUTS 2 regions, and when four of them have no value, there is not much confidence in the result we get.
 
@@ -285,7 +325,7 @@ filter(Year == 2010)
 The gini value goes from 0 to 1. Where 0 is a perfect equality and 1 is inequality.
 When the gini is 0, it is likely to believe there is missing som data for 2010. Further we will use filter to take away the gini´s who are zero. 
 
-
+***Graph 10 ***
 
 In this ggplot, we can see how the Gini is distributed per country.
 We can see that France has a point that stands out from the others, while the other countries have most of their points between 0 and 0.1. We have to be observant about that the countries Denmark, Hungary, Portugal and Slovakia don't have so many observations after we divided the countries into Nuts2 levels, that´s why we choose to only look at France by itself and all the countries together when we move forward in the assignment. 
@@ -335,7 +375,7 @@ $$ Regional inequality_i = \beta_1 + \beta_2Regional development_i+u_i$$
 This equation tells us what the regional inequality will be when the regional development is = 0 The slope of the curve will show us how much inequality will change for each increase in development.
 If we increase regional development by 1, regional inequality will increase by 1.
 
-
+***Graph 11***
 
 In this ggplot we look at the relationship between Gini and GDP per capita in 2010 for all countries. We see in the graph that we have points that are above and below the regression line. There are two points on the right that stand out significantly.
 
@@ -463,8 +503,11 @@ lm.10 = lm(Gini2 ~ gdp_per_capita +Road + lea + Edu, mlrdata)
   )
 
 ```
-France has 22 observations, such tests give the best results the more observations we have. R2 tells us something about whether the variables have an influence on the dependent variable. if the values have an increase for each new model, this tells us that we have a connection. if the value decreases, they will say that there is no connection between these variables.In our case, we can see that R2 rises right up to model 4. This may indicate that the combination of GDP per capita and life expectancy has no effect on Gini. We end up at 0.412 on R2 which says that 41,2% of the change in Gini can be attributed to these variables. in model 1 we can see that it is education that has the highest influence on the Gini, we also see this again in model 3. In the models we have life expectancy, it is this that has the highest influence on the Gini.In the 7th model where we have all the variables. We can see that it is Education and Lifeexpectancy that have the highest effect on the Gini.
+France has 21 observations, such tests give the best results the more observations we have. R2 tells us something about whether the variables have an influence on the dependent variable. if the values have an increase for each new model, this tells us that we have a connection. if the value decreases, they will say that there is no connection between these variables.In our case, we can see that R2 rises right up to model 4. This may indicate that the combination of GDP per capita and life expectancy has no effect on Gini. We end up at 0.412 on R2 which says that 41,2% of the change in Gini can be attributed to these variables. in model 1 we can see that it is education that has the highest influence on the Gini, we also see this again in model 3. In the models we have life expectancy, it is this that has the highest influence on the Gini.In the 7th model where we have all the variables. We can see that it is Education and Lifeexpectancy that have the highest effect on the Gini.
 
+***Table 21***
+***Table 22***
+***Table 23***
 
 ### Discuss the overall fit of your model
 
@@ -640,6 +683,7 @@ coefficients(reg,vcov=hccm )
 gdppop %>%
     filter(Year==2010) %>%
   vtable::st()
+
 ```
 
 #### Table 2 {data-link="Table 2"}
@@ -655,7 +699,7 @@ ungroup() %>%
 summarise( GDP_per_Capita = mean(gdp_per_capita))
 ```
 
-#### Figure 1 {data-link="Figure 1"}
+#### Graph 1 {data-link="Graph 1"}
 
 ```{r GDP in Denmark}
 #| echo = FALSE
@@ -666,7 +710,7 @@ gdppop%>%
      geom_point(lwd = .8) +
    labs(title = 'GDP per capita in Denmark', x = "Year", y = "GDP Per capita") 
 ```
-
+#### Table 3 {data-link="Table 3"}
 ```{r the whealtiest regions in Denmark}
 #| echo = FALSE
 gdpdk <- gdppop%>%
@@ -676,19 +720,21 @@ gdpdk <- gdppop%>%
 slice_max(gdpdk, gdp_per_capita, n=3)
 ```
 
+#### Table 4 {data-link="Table 4"}
 ```{r The poorest regions in Denmark}
 #| echo = FALSE
 slice_min(gdpdk, gdp_per_capita, n=3)
 
 ```
 
+#### Table 5 {data-link="Table 5"}
 ```{r}
 #| echo = FALSE
 gdpdk %>%
 summary()
 ```
 
-#### Figure 2 {data-link="Figure 2"}
+#### Graph 2 {data-link="Graph 2"}
 
 ```{r GDP in France}
 #| echo = FALSE
@@ -718,6 +764,7 @@ gdppop <- gdppop %>%
    filter(Region != 'FRY50') 
 ```
 
+#### Graph 3 {data-link="Graph 3"}
 ```{r France without the FRY regions}
 #| echo = FALSE
 gdppop%>%
@@ -727,7 +774,7 @@ gdppop%>%
      geom_point(lwd = .8) +
    labs(title = 'GDP per capita in France', x = "Year", y = "GDP Per capita")
 ```
-
+#### Table 6 {data-link="Table 6"}
 ```{r The whealtiest regions in France}
 #| echo = FALSE
 gdpfr <- gdppop %>%
@@ -737,6 +784,7 @@ gdpfr <- gdppop %>%
 slice_max(gdpfr, gdp_per_capita, n=3)
 ```
 
+#### Table 7 {data-link="Table 7"}
 ```{r The poorest regions in France}
 #| echo = FALSE
 slice_min(gdpfr, gdp_per_capita, n=3)
@@ -747,7 +795,7 @@ slice_min(gdpfr, gdp_per_capita, n=3)
 summary(gdpfr)
 ```
 
-#### Figure 3 {data-link="Figure 3"}
+#### Graph 4 {data-link="Graph 4"}
 
 ```{r GDP in Hungary and Slovakia}
 #| echo = FALSE
@@ -759,6 +807,7 @@ gdppop %>%
    labs(title = 'GDP per capita in Hungary and Slovakia ', x = "Year", y = "GDP Per capita")
 ```
 
+#### Table 8 {data-link="Table 8"}
 ```{r The whealtiest regions in Hungary and Slovakia}
 #| echo = FALSE
 gdphusk <- gdppop%>%
@@ -768,7 +817,7 @@ gdphusk <- gdppop%>%
 slice_max(gdphusk, gdp_per_capita, n=3)
 ```
   
-
+#### Table 9 {data-link="Table 9"}
 ```{r The poorest regions in Hungary and Slovakia}
 #| echo = FALSE
 slice_min(gdphusk, gdp_per_capita, n=3)
@@ -780,7 +829,7 @@ gdphusk %>%
 summary()
 ```
 
-#### Figure 4 {data-link="Figure 4"}
+#### Graph 5 {data-link="Graph 5"}
 
 ```{r GDP in Portugal}
 #| echo = FALSE
@@ -792,6 +841,7 @@ gdppop%>%
    labs(title = 'GDP per capita in Portugal', x = "Year", y = "GDP Per capita") 
 ```
 
+#### Table 10 {data-link="Table 10"}
 ```{r the whealtiest regions in Portugal}
 #| echo = FALSE
 gdppt <- gdppop%>%
@@ -800,7 +850,8 @@ gdppt <- gdppop%>%
   select(Region, gdp_per_capita)
 slice_max(gdppt, gdp_per_capita, n=3)
 ```
-The poorest regions in Portugal
+
+#### Table 11 {data-link="Table 11"}
 ```{r The poorest regions in Portugal}
 #| echo = FALSE
 slice_min(gdppt, gdp_per_capita, n=3)
@@ -812,7 +863,7 @@ gdppt %>%
 summary()
 ```
 
-#### Figure 5 {data-link="Figure 5"}
+#### Graph 6 {data-link="Graph 6}
 
 ```{r NUTS2 in Denmark}
 #| echo = FALSE
@@ -823,7 +874,7 @@ ggplot(aes(x = Year, y=gini_n2, fill=nuts2, color=nuts2)) +
   geom_line(lwd = .8) +
    labs(title = 'Nuts 2 - Gini in Denmark', x = "Year", y = "Gini")
 ```
-
+#### Table 12 {data-link="Table 12"}
 ```{r}
 #| echo = FALSE
 gdppop %>%
@@ -832,7 +883,8 @@ select(Year,nuts2, gini_n2) %>%
 distinct(nuts2, Year,.keep_all =TRUE) %>%
   filter(Year==2010)
 ```
-Outliers in Denmark
+
+#### Table 13 {data-link="Table 13"}
 ```{r Outliers in Denmark}
 #| echo = FALSE
 dkoutliers <- gdppop %>%
@@ -842,7 +894,7 @@ dkoutliers <- gdppop %>%
 dkoutliers
 ```
 
-#### Figure 6 {data-link="Figure 6"}
+#### Graph 7 {data-link="Graph 7"}
 
 ```{r NUTS2 in France}
 #| echo = FALSE
@@ -855,6 +907,7 @@ ggplot(aes(x = Year, y=gini_n2, fill=nuts2, color=nuts2)) +
 
 ```
 
+#### Table 14 {data-link="Table 14"} 
 ```{r}
 #| echo = FALSE
 gdppop %>%
@@ -864,7 +917,7 @@ distinct(nuts2, Year,.keep_all =TRUE) %>%
   filter(Year==2010)
 ```
 
-Outliers in France
+#### Table 15 {data-link="Table 15"}
 ```{r Outliers in France}
 #| echo = FALSE
 froutliers <- gdppop %>%
@@ -874,7 +927,7 @@ froutliers <- gdppop %>%
 froutliers
 ```
 
-#### Figure 7 {data-link="Figure 7"}
+#### Graph 8 {data-link="Graph 8"}
 
 ```{r NUTS2 in Hungary and Slovakia}
 #| echo = FALSE
@@ -887,6 +940,7 @@ ggplot(aes(x = Year, y=gini_n2, fill=nuts2, color=nuts2)) +
 
 ```
 
+#### Table 16 {data-link="Table 16"}
 ```{r}
 #| echo = FALSE
 gdppop %>%
@@ -895,7 +949,7 @@ select(Year,nuts2, gini_n2) %>%
 distinct(nuts2, Year,.keep_all =TRUE) %>%
   filter(Year==2010)
 ```
-
+#### Table 17 {data-link="Table 17"}
 ```{r}
 #| echo = FALSE
 gdppop %>%
@@ -904,7 +958,7 @@ select(Year,nuts2, gini_n2) %>%
 distinct(nuts2, Year,.keep_all =TRUE) %>%
   filter(Year==2010)
 ```
-
+#### Table 18 {data-link="Table 18"}
 ```{r Outliers in Hungary and Slovakia}
 #| echo = FALSE
 huskoutliers <- gdppop %>%
@@ -914,7 +968,7 @@ huskoutliers <- gdppop %>%
 huskoutliers
 ```
 
-#### Figure 8 {data-link="Figure 8"}
+#### Graph 9 {data-link="Figure 9"}
 
 ```{r NUTS2 in Portugal}
 #| echo = FALSE
@@ -926,7 +980,7 @@ ggplot(aes(x = Year, y=gini_n2, fill=nuts2, color=nuts2)) +
    labs(title = 'Nuts 2 - Gini in Portugal', x = "Year", y = "Gini")
 
 ```
-
+#### Table 19 {data-link="Table 19"}
 ```{r}
 #| echo = FALSE
 gdppop %>%
@@ -935,7 +989,8 @@ select(Year,nuts2, gini_n2) %>%
 distinct(nuts2, Year,.keep_all =TRUE) %>%
   filter(Year==2010)
 ```
-Outliers in Portugal
+
+#### Table 20 {data-link="Table 20"}
 ```{r Outliers in Portugal}
 #| echo = FALSE
 ptoutliers <- gdppop %>%
@@ -947,7 +1002,7 @@ ptoutliers
 
 **Assignment 2**
 
-#### Figure 9 {data-link="Figure 9"}
+#### Graph 10 {data-link="Graph 10"}
 
 ```{r}
 #| echo = FALSE
@@ -968,7 +1023,7 @@ ggplot()+
 #for alle land i 2010
 ```
 
-#### Figure 10 {data-link="Figure 10"}
+#### Graph 11 {data-link="Graph 11"}
 
 Estimate the effect of regional development on regional inequality GINI for the year 2010
 
@@ -981,7 +1036,7 @@ ggplot(gdppop2010, aes(x = gdp_per_capita, y = Gini)) +
   labs(title = "Gini and GDP per capita in 2010 for all countries")
 ```
 
-#### Figure 11 {data-link="Figure 11"}
+#### Graph 12 {data-link="Graph 12"}
 
 Discuss the classical assumptions OLS in light of your data and plots
 
@@ -993,6 +1048,7 @@ plot(ols) +
   labs(title = "OLS for all countries")
 ```
 
+#### Graph 13 {data-link="Graph 13"}
 ```{r}
 #| echo = FALSE
 olsfr = lm_function_plot(France2010)
@@ -1001,15 +1057,9 @@ plot(olsfr) +
   labs(title = "OLS for France")
 ```
 
-#### Figure 12 {data-link="Figure 12"}
-
-#### Figure 13 {data-link="Figure 13"}
-
-#### Figure 14 {data-link="Figure 14"}
-
-
 Plots the residuals against the predicted values of our model
 
+#### Graph 14 {data-link="Graph 14"}
 ```{r}
 #| echo = FALSE
 ggplot(Denmark2010, aes(x = gdp_per_capita, y = Gini)) +
@@ -1018,7 +1068,7 @@ ggplot(Denmark2010, aes(x = gdp_per_capita, y = Gini)) +
   labs(title = "Gini and GDP per capita for Denmark", x = "GDP per capita 2010", Y = "Gini")
 ```
 
-
+#### Graph 15 {data-link="Graph 15"}
 ```{r}
 #| echo = FALSE
 ggplot(HungarySlovakia2010, aes(x = gdp_per_capita, y = Gini)) +
@@ -1027,6 +1077,7 @@ ggplot(HungarySlovakia2010, aes(x = gdp_per_capita, y = Gini)) +
   labs(title = "Gini and GDP per capita for Hungary and Slovakia",x = "GDP per capita 2010", Y = "Gini")
 ```
 
+#### Graph 16 {data-link="Graph 16"}
 ```{r}
 #| echo = FALSE
 ggplot(Portugal2010, aes(x = gdp_per_capita, y = Gini)) +
@@ -1035,6 +1086,8 @@ ggplot(Portugal2010, aes(x = gdp_per_capita, y = Gini)) +
   labs(title = "Gini and GDP per capita for Portugal",x = "GDP per capita 2010", Y = "Gini")
 ```
 
+
+#### Table 21 {data-link="Table 21"}
 ```{r}
 #| echo = FALSE
 mlrdata <- Denmark2010
@@ -1058,6 +1111,7 @@ lm.12 = lm(Gini2 ~ gdp_per_capita +Road + lea, mlrdata)
 
 In Denmark, we can see that models 1, 2 and 4 all have a negative effect when it comes to the variables being dependent on each other. in model 5, where we look at education and life expectancy, we can see a positive effect. the same in model 6 with motorway and life expectancy. when we look at R2, this is high on model 3. but since we only have 4 observations from Denmark, it is not possible to draw any conclusion as to whether these variables are relevant to each other.
 
+#### Table 22 {data-link="Table 22"}
 ```{r}
 #| echo = FALSE
 mlrdata <- HungarySlovakia2010
@@ -1080,6 +1134,8 @@ lm.12 = lm(Gini2 ~ gdp_per_capita +Road + lea, mlrdata)
 ```
 Again we have chosen to merge Hungary and Slovakia when we are going to do this multiple regression analysis. here we can see that models 4 and 5 have a positive effect on Gini. Model 5, which has education and life expectancy as variables, both values are positive but they have a rather low R2, which means that they do not have such a strong correlation anyway.
 
+
+#### Table 23 {data-link="Table 23"}
 ```{r}
 #| echo = FALSE
 mlrdata <- Portugal2010
